		  Galeon and other Unix based browsers.'
		* Fixed #406 and #380: 'some clients get an unexpected very
		  high priority'

	ken:
		* Fixed a hang-using-100%-cpu-on-exit bug
		* Fixed a crash when enabling UDP after startup

	Kry:
		* Added Version Check (you can disable it on preferences).
		* Added "source comes from" (on the "Time remaining" column)
		* Fixed HTTP download code not returning proper error code (causing crashes).
		* Fixed OS_Info packet only being sent to downlaoding clients.
		* Fixed Solaris mount info file name.
		* Fixed includes on daemon for Solaris.
		* Fixed mldonkey detection. Did anyone notice mldonkey bans aMule?
		* Fixed SetAllTimeTransfered parameter size (thanks eylzo)
		* Fixed #430: "Sources order by priority/status"
		* Fixed #442: "Sort by 'Time Remaining' puts files which are not transferring first"
		* Fixed #453: "Add option to export links with AICH hashes"
		* Fixed #458: "Wrong gauge size on shared files control "

	volpol:
		* Ports display fix.
		* A4AF swap to this fix.

	Special Thanks To:

		* Bug reporters:
			Ateo
			BeFalou
			MrFaber
			xushi		
			
		* All the usual people. You don't know who they are? Just check 
		   previous changelogs :P
		  

Version 2.0.1 - The " Woops, HotFix " version.
----------
2005-05-18

	ken:
		* Fixed Tray Icon compilation on Mac.

	Kry:
		* HOTFIX: Fixed 100% CPU usage because of network errors on some servers.
		* Fixed crash after removing a server.
		* Fixed sorting on the UploadList by Transferred (thanks eylzo).
		* Users/Files on server no longer show as negative if server sends wrong values.
		* Check for autopoint on configure to warn for gettext not installed.
		
	niet:
		* Updated xal.pl (some fixes).

	Phoenix:
		* Added DNS resolving functionality to amulecmd's connect command. 
		  This is usefull for dynamic IP servers. 
		  Now you can use the server's name instead of the server's IP address.
		* Fixed a bug in http proxy authentication code.

	Special Thanks To:
		