@@ -18,6 +18,9 @@ Version 2.0.2 - The " [Your Ad Here] " version.
 	Kry:
 		* Added Version Check (you can disable it on preferences).
 		* Added "source comes from" (on the "Time remaining" column)
+		* Now you can compile aMule without gettext, using --disable-nls
+		  Additionally, aMule no longer stops configure if there is no gettext installed.
+		* Fixed aMule shutting down if a source seeds file is 0-size.
 		* Fixed HTTP download code not returning proper error code (causing crashes).
 		* Fixed OS_Info packet only being sent to downlaoding clients.
 		* Fixed Solaris mount info file name.
